--- a/frontend/feedback-app/dockerfile
+++ b/frontend/feedback-app/dockerfile
@@ -10,6 +10,8 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+RUN chmod +x ./node_modules/.bin/react-scripts
+
 # Copy the rest of the application code
 COPY . ./
 
