--- a/frontend/feedback-app/dockerfile
+++ b/frontend/feedback-app/dockerfile
@@ -4,16 +4,23 @@ FROM node:18 AS build
 # Set working directory
 WORKDIR /app
 
+# Add a non-root user for the application
+RUN useradd -ms /bin/bash appuser
+
 # Copy package.json and package-lock.json
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
-RUN chmod +x ./node_modules/.bin/*
+# Set execution permissions for binaries inside node_modules/.bin
+RUN chmod -R +x ./node_modules/.bin/*
+
+# Switch to non-root user
+USER appuser
 
 # Copy the rest of the application code
-COPY . ./
+COPY . .
 
 # Build the React application
 RUN npm run build
