--- a/k8s/backend-dev.yaml
+++ b/k8s/backend-dev.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: middleware
-        image: ishika2307/my-cafe-backend:latest
+        image: ishika2307/my-cafe-backend:v5
         ports:
         - containerPort: 5000
         env:
